2020-04-29         [RELEASE] Release of social_gdpr 0.1.0 (Nicole Cordes)
2020-04-28 07163d9 [FEATURE] Add YouTube handler (Nicole Cordes)
2020-04-27 f1deeb6 [FEATURE] Register TypoScriptFrontendController hook (Nicole Cordes)
2020-04-24 69ecebd [TASK] Add basic extension files (Nicole Cordes)